--- a/views/production/production.ejs
+++ b/views/production/production.ejs
@@ -84,12 +84,12 @@
                                     </div>
                                 </div>
                                 <div class="row justify-content-end">
-                                    <div class="col-3">
+                                    <div class="col-md-3">
                                         <span class="text-right">Max Quantity: <span id="max-quantity"></span></span>
                                     </div>
                                 </div>
                                 <div class="row mr-4 ml-4 mb-2">
-                                    <div class="table-responsive scrollable-table-container-xsm table-size-sm-fixed">
+                                    <div class="table-responsive scrollable-table-container-xsm border table-size-sm-fixed">
                                         <table class="table table-bordered custom-mobile-table" id="components-datatable" width="100%" cellspacing="10">
                                             <thead class="table-header">
                                                 <tr>
@@ -108,7 +108,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row justify-content-center">
                             <div class="col-md-4">
                                 <div class="input-group mb-2">
                                     <div class="input-group-prepend">
@@ -126,7 +126,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row mb-2">
+                        <div class="row justify-content-center mb-2">
                             <div class="col-md-8">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -138,12 +138,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row mb-2">
+                        <div class="row justify-content-center mb-2">
                             <div class="col-md-8">
                                 <textarea class="form-control" id="notes" placeholder="Add Notes" rows="3"></textarea>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row justify-content-center">
                             <div class="col-md-8">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -152,8 +152,11 @@
                                     <input autocomplete="off" id="productionline" name="productionline" type="text" class="form-control" placeholder="Enter Production Line" aria-label="productionlinename" aria-describedby="basic-addon1">
                                 </div>
                             </div>
-                            <div class="col-md-4 align mt-1">
-                                <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-50">
+                        </div>
+                        
+                        <div class="row justify-content-end">
+                            <div class="col-md-4 mt-2 text-right">
+                                <button id="addBtn" name="addBtn" class="btn btn-outline-inventory shadow-sm w-50">
                                     <i class="fa fa-plus" aria-hidden="true"></i>
                                     ADD
                                 </button>
