--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <div class="col-md-2 mt-2 align">
-                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory shadow-sm w-100">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Filter
                             </button>
