--- a/views/addontype/addontypescripts.ejs
+++ b/views/addontype/addontypescripts.ejs
@@ -1,10 +1,10 @@
 <script>
-    $(document).ready(function () {
-        let id = "";
-        let status = "";
-        let name = "";
+  $(document).ready(function () {
+    let id = "";
+    let status = "";
+    let name = "";
 
-        const loader = `  
+    const loader = `  
             <tr id="loading-state">
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
@@ -16,276 +16,298 @@
                 <td><div class="custom-loader"></div></td>
             </tr>`;
 
-        const tbody = $('#datatable tbody');
-        for (let i = 0; i < 7; i++) {
-            tbody.append(loader);
-        } 
+    const tbody = $("#datatable tbody");
+    for (let i = 0; i < 7; i++) {
+      tbody.append(loader);
+    }
 
-        // LoadList();
-        // reloadTableData();
+    // LoadList();
+    reloadTableData();
 
-        $('#datatable tbody').on('click', 'tr', function () {
-            var dataRow = [];
-            $(this).closest('tr').find('td').each(function () {
-                dataRow.push($(this).text());
-            });
-            console.log(dataRow);
-            id = dataRow[0];
-            name = dataRow[1];
-            status = dataRow[5];
-        })
-
-        $(document).on('click', '#editBtn', function () {
-            $('#id').val(id);
-            $('#name').val(name);
-            $('#editModal').modal('show');
-            console.log(id);
-        })
-
-        $(document).on('click', '#closeBtn', function () {
-
-            $('#accessnamemodal').val('');
-
-        })
-
-
-        $(document).on("input", "#type", function () {
-            $("#typeID").val("");
+    $("#datatable tbody").on("click", "tr", function () {
+      var dataRow = [];
+      $(this)
+        .closest("tr")
+        .find("td")
+        .each(function () {
+          dataRow.push($(this).text());
         });
+      console.log(dataRow);
+      id = dataRow[0];
+      name = dataRow[1];
+      status = dataRow[4];
+    });
 
-        $(document).on('click', '#addBtn', function () {
-            let name = $('#name').val();
+    $(document).on("click", "#editBtn", function () {
+      $("#id").val(id);
+      $("#namemodal").val(name);
+      $("#editModal").modal("show");
+      console.log(id);
+    });
 
-            var message = "";
+    $(document).on("click", "#closeBtn", function () {
+      $("#accessnamemodal").val("");
+    });
 
-            if (name == '') { message += 'Add on Name ' }
+    $(document).on("input", "#type", function () {
+      $("#typeID").val("");
+    });
 
-            if (message != '') {
-                warning('Required', `Please fill up ${message}`);
+    $(document).on("click", "#addBtn", function () {
+      let name = $("#name").val();
+
+      console.log(name);
+
+      var message = "";
+
+      if (name == "") {
+        message += "Add on Name ";
+      }
+
+      if (message != "") {
+        warning("Required", `Please fill up ${message}`);
+      } else {
+        $.ajax({
+          type: "POST",
+          url: "/addontype/save",
+          data: {
+            name: name,
+          },
+          success: function (result) {
+            if (result.msg == "success") {
+              reloadTableData();
+              success("Saved", "Successfully");
+              $("#name").val("");
             }
-            else {
-                $.ajax({
-                    type: 'POST',
-                    url: '/addontype/save',
-                    data: {
-                        name: name,
-                    },
-                    success: function (result) {
-                        if (result.msg == 'success') {
-                            reloadTableData()
-                            success('Saved', 'Successfully')
-                            $('#name').val('');
-                        } ID
+            ID;
 
-                        if (result.msg == 'exist') {
-                            warning('Exist', `${name} already exist!`);
-                        }
-
-                    },
-                    error: function (err) {
-                        errormsg(err);
-                    }
-                })
+            if (result.msg == "exist") {
+              warning("Exist", `${name} already exist!`);
             }
-        })
+          },
+          error: function (err) {
+            errormsg(err);
+          },
+        });
+      }
+    });
 
-        function filterTableRows() {
-            const searchQuery = $('#search-input').val().trim().toLowerCase();
-            let foundMatches = false;
+    function filterTableRows() {
+      const searchQuery = $("#search-input").val().trim().toLowerCase();
+      let foundMatches = false;
 
-            $('#no-match-row').remove();
+      $("#no-match-row").remove();
 
-            $('#datatable tbody tr').each(function () {
-                const rowData = $(this).text().toLowerCase();
-                if (rowData.includes(searchQuery)) {
-                    $(this).show();
-                    foundMatches = true;
-                } else {
-                    $(this).hide();
-                }
-            });
-
-            if (!foundMatches) {
-                const noMatchRow = $('<tr>').append(
-                    $('<td>', {
-                        colspan: 7,
-                        class: 'text-center',
-                        text: 'No Data Matched'
-                    })
-                );
-                $('#datatable tbody').append(noMatchRow);
-                noMatchRow.attr('id', 'no-match-row');
-            }
+      $("#datatable tbody tr").each(function () {
+        const rowData = $(this).text().toLowerCase();
+        if (rowData.includes(searchQuery)) {
+          $(this).show();
+          foundMatches = true;
+        } else {
+          $(this).hide();
         }
+      });
 
-        $('#search-input').on('input', filterTableRows);
+      if (!foundMatches) {
+        const noMatchRow = $("<tr>").append(
+          $("<td>", {
+            colspan: 7,
+            class: "text-center",
+            text: "No Data Matched",
+          })
+        );
+        $("#datatable tbody").append(noMatchRow);
+        noMatchRow.attr("id", "no-match-row");
+      }
+    }
 
-        function populateAccessTable(data) {
-            // console.log(data);
-            const tableBody = $('#datatable tbody');
-            tableBody.empty();
+    $("#search-input").on("input", filterTableRows);
 
-            if (data.length === 0) {
-                const tr = $('<tr>').append($('<td>', {
-                    colspan: 7,
-                    class: 'text-center',
-                    text: 'No Data Matched'
-                }));
-                tableBody.append(tr);
-            } else {
-                data.forEach(item => {
-                    if (item.status === 'ACTIVE') {
-                        action = `
+    function populateAccessTable(data) {
+      // console.log(data);
+      const tableBody = $("#datatable tbody");
+      tableBody.empty();
+
+      if (data.length === 0) {
+        const tr = $("<tr>").append(
+          $("<td>", {
+            colspan: 7,
+            class: "text-center",
+            text: "No Data Matched",
+          })
+        );
+        tableBody.append(tr);
+      } else {
+        data.forEach((item) => {
+          if (item.status === "ACTIVE") {
+            action = `
                         <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>
                         <span class="editbutton" id="inactiveBtn"><i class="fas fa-eye-slash" style="color: rgb(99, 115, 129);"></i></span>`;
-                    } else if (item.status === 'INACTIVE') {
-                        action = `
+          } else if (item.status === "INACTIVE") {
+            action = `
                         <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>
                         <span class="editbutton" id="activeBtn"><i class="fas fa-eye" style="color: rgb(99, 115, 129);"></i></span>`;
-                    }
-                    const statusBackground = getStatusBackground(item.status);
-                    const containerBackground = getStatusContainerBackground(item.status);
+          }
+          const statusBackground = getStatusBackground(item.status);
+          const containerBackground = getStatusContainerBackground(item.status);
 
-                    const tr = $('<tr>').append(
-                        $('<td>', { text: item.id, 'data-label': 'Access Code', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.name, 'data-label': 'Access Name', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
-                        $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
-                            $('<div>', { class: containerBackground }).append(
-                                $('<span>', { text: item.status, class: statusBackground })
-                            )
-                        ),
-                        $('<td>', { html: action, 'data-label': 'Action', class: '' })
-                    );
-                    tableBody.append(tr);
-                });
+          const tr = $("<tr>").append(
+            $("<td>", {
+              text: item.id,
+              "data-label": "Access Code",
+              class: "custom-mobile-align",
+            }),
+            $("<td>", {
+              text: item.name,
+              "data-label": "Access Name",
+              class: "custom-mobile-align",
+            }),
+            $("<td>", {
+              text: item.createdby,
+              "data-label": "Created By",
+              class: "custom-mobile-align",
+            }),
+            $("<td>", {
+              text: item.createddate,
+              "data-label": "Created Date",
+              class: "custom-mobile-align",
+            }),
+            $("<td>", {
+              class: "custom-mobile-align",
+              "data-label": "Status",
+            }).append(
+              $("<div>", { class: containerBackground }).append(
+                $("<span>", { text: item.status, class: statusBackground })
+              )
+            ),
+            $("<td>", { html: action, "data-label": "Action", class: "" })
+          );
+          tableBody.append(tr);
+        });
+      }
+    }
+
+    function reloadTableData() {
+      $(".progress").hide();
+      $(".progress").slideDown();
+
+      $.ajax({
+        url: "/addontype/load",
+        method: "GET",
+        dataType: "json",
+        xhrFields: {
+          onprogress: function (e) {
+            if (e.lengthComputable) {
+              var percentComplete = (e.loaded / e.total) * 100;
+              $(".progress-bar").css("width", percentComplete + "%");
             }
-        }
-
-        function reloadTableData() {
-            $(".progress").hide();
-            $(".progress").slideDown();
-
-            $.ajax({
-                url: '/addontype/load',
-                method: 'GET',
-                dataType: 'json',
-                xhrFields: {
-                    onprogress: function (e) {
-                        if (e.lengthComputable) {
-                            var percentComplete = (e.loaded / e.total) * 100;
-                            $(".progress-bar").css("width", percentComplete + "%");
-                        }
-                    }
-                },
-                success: function (data) {
-                    setTimeout(function () {
-                        $(".progress").slideUp(function () {
-                            if (data.msg === 'success') {
-                                populateAccessTable(data.data);
-                            } else {
-                                console.error(data.msg);
-                            }
-                        })
-                    }, 1000);
-                },
-                error: function (error) {
-                    console.error(error);
-                }
+          },
+        },
+        success: function (data) {
+          setTimeout(function () {
+            $(".progress").slideUp(function () {
+              if (data.msg === "success") {
+                populateAccessTable(data.data);
+              } else {
+                console.error(data.msg);
+              }
             });
-        }
+          }, 1000);
+        },
+        error: function (error) {
+          console.error(error);
+        },
+      });
+    }
 
-        $(document).on('click', '#activeBtn', function () {
-            console.log(id);
-            console.log(status);
-            $.ajax({
-                type: 'POST',
-                url: '/addontype/status',
-                data: {
-                    status: status,
-                    id: id,
-                },
-                success: function (result) {
-                    if (result.msg == 'success') {
-                        reloadTableData();
-                        success('Saved', 'Successfully')
-                    }
+    $(document).on("click", "#activeBtn", function () {
+      console.log(id);
+      console.log(status);
+      $.ajax({
+        type: "PUT",
+        url: "/addontype/status",
+        data: {
+          status: status,
+          id: id,
+        },
+        success: function (result) {
+          if (result.msg == "success") {
+            reloadTableData();
+            success("Saved", "Successfully");
+          }
 
-                    if (result.msg == 'notexist') {
-                        warning(`${id} does not exist!`);
-                    }
+          if (result.msg == "notexist") {
+            warning(`${id} does not exist!`);
+          }
+        },
+        error: function (err) {
+          errormsg(err);
+        },
+      });
+    });
 
-                },
-                error: function (err) {
-                    errormsg(err);
-                }
-            })
-        });
+    $(document).on("click", "#inactiveBtn", function () {
+      console.log(id);
+      console.log(status);
+      $.ajax({
+        type: "PUT",
+        url: "/addontype/status",
+        data: {
+          status: status,
+          id: id,
+        },
+        success: function (result) {
+          if (result.msg == "success") {
+            reloadTableData();
+            success("Saved", "Successfully");
+          }
 
-        $(document).on('click', '#inactiveBtn', function () {
-            console.log(id);
-            console.log(status);
-            $.ajax({
-                type: 'POST',
-                url: '/addontype/status',
-                data: {
-                    status: status,
-                    id: id,
-                },
-                success: function (result) {
-                    if (result.msg == 'success') {
-                        reloadTableData();
-                        success('Saved', 'Successfully')
-                    }
+          if (result.msg == "notexist") {
+            warning(`${id} does not exist!`);
+          }
+        },
+        error: function (err) {
+          errormsg(err);
+        },
+      });
+    });
 
-                    if (result.msg == 'notexist') {
-                        warning(`${id} does not exist!`);
-                    }
+    $(document).on("click", "#updateBtn", function () {
+      let name = $("#namemodal").val();
 
-                },
-                error: function (err) {
-                    errormsg(err);
-                }
-            })
-        });
+      var message = "";
 
-        $(document).on('click', '#updateBtn', function () {
-            let name = $('#namemodal').val();
+      if (name == "") {
+        message += "Access Code ";
+      }
 
-            var message = "";
-
-            if (name == '') { message += 'Access Code ' }
-
-            if (message != '') {
-                warning('Required', `Please fill up ${message}`);
+      if (message != "") {
+        warning("Required", `Please fill up ${message}`);
+      } else {
+        $.ajax({
+          type: "PUT",
+          url: "/addontype/edit",
+          data: {
+            name: name,
+            id: id,
+          },
+          success: function (result) {
+            if (result.msg == "success") {
+              reloadTableData();
+              $("#editModal").modal("hide");
+              $("#namemodal").val("");
+              success("Saved", "Successfully");
             }
-            else {
-                $.ajax({
-                    type: 'POST',
-                    url: '/addontype/edit',
-                    data: {
-                        name: name,
-                    },
-                    success: function (result) {
-                        if (result.msg == 'success') {
-                            reloadTableData();
-                            $('#editModal').modal('hide');
-                            $('#namemodal').val('');
-                            success('Saved', 'Successfully')
-                        }
 
-                        if (result.msg == 'duplicate') {
-                            warning('Duplicate', `${name} already exist!`);
-                        }
-
-                    },
-                    error: function (err) {
-                        errormsg(err);
-                    }
-                })
+            if (result.msg == "duplicate") {
+              warning("Duplicate", `${name} already exist!`);
             }
-        })
-
-    })
+          },
+          error: function (err) {
+            errormsg(err);
+          },
+        });
+      }
+    });
+  });
 </script>
