--- a/views/payment/payment.ejs
+++ b/views/payment/payment.ejs
@@ -15,19 +15,17 @@
                     </div>
                     <div class="card-body">
                         <div class="row mb-2">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Payment Code</label>
                                 <input autocomplete="off" id="paymentcode" name="paymentcode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Current Payment Name</label>
                                 <input autocomplete="off" id="currentpaymentName" name="currentpaymentName" type="text" class="form-control" placeholder="Enter new payment name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Payment Name</label>
                                 <input autocomplete="off" id="paymentnamemodal" name="paymentnamemodal" type="text" class="form-control" placeholder="Enter new payment name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
@@ -99,7 +97,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scroll-cardbody-size-580">
+        <div class="table-responsive scroll-cardbody-size-580 border">
             <table class="table table-bordered custom-mobile-table" id="payment-table" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
