--- a/views/location/location.ejs
+++ b/views/location/location.ejs
@@ -15,15 +15,19 @@
                     </div>
                     <div class="card-body">
                         <div class="row mb-2">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Location ID</label>
                                 <input autocomplete="off" id="locationidmodal" name="locationidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
+                            <div class="col-md-6">
+                                <label class="form-label" for="mu_password">Current Location Name</label>
+                                <input autocomplete="off" id="currentlocationname" name="currentlocationname" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                            </div>
                         </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Location Name</label>
-                                <input autocomplete="off" id="locationnamemodal" name="locationnamemodal" type="text" class="form-control" placeholder="Enter new category name" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="locationnamemodal" name="locationnamemodal" type="text" class="form-control" placeholder="Enter New Location name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
