--- a/views/pos/pos.ejs
+++ b/views/pos/pos.ejs
@@ -149,7 +149,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scroll-cardbody-size-710">
+        <div class="table-responsive scroll-cardbody-size-710 border">
             <table class="table table-bordered custom-mobile-table" id="pos-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
