--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -196,7 +196,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scroll-cardbody-size-710">
+        <div class="table-responsive scroll-cardbody-size-710 border">
             <table class="table custom-mobile-table" id="products-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
