--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -14,30 +14,22 @@
                         <h6 class="m-0 font-weight-bold table-title">Update User Password: </h6>
                     </div>
                     <div class="card-body">
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">User Code</label>
                                 <input autocomplete="off" id="usercode" name="usercode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Current Password</label>
-                                <input autocomplete="off" id="currentpassword" name="currentpassword" type="password" class="form-control" placeholder="Enter curren passowrd" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="currentpassword" name="currentpassword" type="password" class="form-control" placeholder="Enter current passowrd" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">New Password</label>
                                 <input autocomplete="off" id="newpassword" name="newpassword" type="password" class="form-control" placeholder="Enter new password" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
-                        <!-- <div class="row mb-2">
-                            <div class="col-md-12">
-                                <label class="form-label" for="mu_password">Confirm Password</label>
-                                <input id="confirmpassword" name="confirmpassword" type="password" class="form-control" placeholder="Confirm new password" aria-label="fullname" aria-describedby="basic-addon1">        
-                            </div>
-                        </div> -->
                     </div>
                 </div>
             </div>
@@ -150,7 +142,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scroll-cardbody-size-710">
+        <div class="table-responsive scroll-cardbody-size-710 border">
             <table class="table table-bordered custom-mobile-table" id="users-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
