--- a/views/category/category.ejs
+++ b/views/category/category.ejs
@@ -23,8 +23,8 @@
               </div>
               <div class="col-md-6">
                 <label class="form-label" for="currentcategoryname">Current Category Name</label>
-                <input autocomplete="off" id="currentcategoryname" name="currentcategoryname" type="text" class="form-control"
-                  aria-label="currentcategoryname" aria-describedby="basic-addon1" disabled />
+                <input autocomplete="off" id="currentcategoryname" name="currentcategoryname" type="text"
+                  class="form-control" aria-label="currentcategoryname" aria-describedby="basic-addon1" disabled />
               </div>
             </div>
             <div class="row mb-2  justify-content-center">
@@ -70,8 +70,8 @@
                   placeholder="Enter Category Name" aria-label="categoryname" aria-describedby="basic-addon1" />
               </div>
             </div>
-            <div class="col-md-4">
-              <button id="addBtn" name="addBtn" class="btn btn-outline-inventory shadow-sm w-25">
+            <div class="col-md-3 md-text-right">
+              <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-50">
                 <i class="fa fa-plus" aria-hidden="true"></i>
                 Add
               </button>
