--- a/views/location/location.ejs
+++ b/views/location/location.ejs
@@ -60,11 +60,11 @@
                                 <input autocomplete="off" id="locationname" name="locationname" type="text" class="form-control" placeholder="Enter Location Name" aria-label="categoryname" aria-describedby="basic-addon1">
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-25">
+                        <div class="col-md-3 md-text-right">
+                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-50">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Add
-                            </button>
+                            </button> 
                         </div>
                     </div>
                 </div>      
