--- a/views/payment/payment.ejs
+++ b/views/payment/payment.ejs
@@ -60,8 +60,8 @@
                                 <input autocomplete="off" id="paymentname" name="paymentname" type="text" class="form-control" placeholder="Enter payment Name" aria-label="paymentname" aria-describedby="basic-addon1">
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-25">
+                        <div class="col-md-3 md-text-right">
+                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-50">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Add
                             </button> 
