--- a/views/position/position.ejs
+++ b/views/position/position.ejs
@@ -48,7 +48,7 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold">Position Type</h6>
+                    <h6 class="m-0 font-weight-bold">Add Position:</h6>
                 </div>
                 <div class="card-body extend">
                     <div class="row">
@@ -60,11 +60,11 @@
                                 <input autocomplete="off" id="positionname" name="positionname" type="text" class="form-control" placeholder="Enter Position Name" aria-label="positionname" aria-describedby="basic-addon1">
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-25">
+                        <div class="col-md-3 md-text-right">
+                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-50">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Add
-                            </button>
+                            </button> 
                         </div>
                     </div>
                 </div>      
