--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 mb-2">
                                 <div class="input-group">
                                     <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Access" name="access"
                                         id="access" />
@@ -91,8 +91,8 @@
                             </div>
 
                         </div>
-                        <div class="row d-flex justify-content-end">
-                            <div class="col-md-2 align mt-3">
+                        <div class="row d-flex justify-content-end mt-2">
+                            <div class="col-md-2 align">
                                 <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
                                     <i class="fa fa-plus" aria-hidden="true"></i>
                                     ADD
@@ -111,31 +111,23 @@
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
-    <div class="card-header py-3 header-bg">
+    <div class="card-header py-2 header-bg">
         <div class="row">
-            <div class="col-md-4">
-                <div class="row mb-2">
-                    <button id="toggleButton" name="toggleButton" class=" ml-3 btn btn-circle btn-outline-inventory ">
-                        <i class="fas fa-chevron-right"></i>
-                    </button>
-                    <h6 class="mt-2 ml-3 font-weight-bold table-title">User Data</h6>
-                </div>   
+            <div class="col-md-4 d-flex mb-2">
+                <button id="toggleButton" name="toggleButton" class="btn btn-circle btn-outline-inventory ">
+                    <i class="fas fa-plus"></i>
+                </button>
+                <h6 class="mt-2 ml-3 font-weight-bold table-title">Users Data</h6> 
             </div>
             <div class="col-md-8">
-                <div class="row ">
-                    <div class="col-10">
-                        <div class="row justify-content-center">
-                            <div class="input-group">
-                                <input autocomplete="off" type="text" class="form-control bg-light small"
-                                    placeholder="Search for..." aria-label="Search"
-                                    aria-describedby="basic-addon2" id="search-input">
-                                <div class="input-group-append">
-                                    <button class="btn sis-btn-color" type="button" id="search-button">
-                                        <i class="fas fa-search fa-sm"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
+                <div class="input-group">
+                    <input autocomplete="off" type="text" class="form-control bg-light small"
+                        placeholder="Search for..." aria-label="Search"
+                        aria-describedby="basic-addon2" id="search-input">
+                    <div class="input-group-append">
+                        <button class="btn sis-btn-color" type="button" id="search-button">
+                            <i class="fas fa-search fa-sm"></i>
+                        </button>
                     </div>
                 </div>
             </div>
