--- a/views/cashreports/cashreports.ejs
+++ b/views/cashreports/cashreports.ejs
@@ -26,7 +26,7 @@
             </div>
         </div>
     <div class="card-body">
-        <div class="table-responsive scroll-cardbody-size-710">
+        <div class="table-responsive scroll-cardbody-size-710 border">
             <table class="table table-bordered custom-mobile-table" id="cashreport-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
