--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -99,7 +99,7 @@
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header py-3 header-bg">
-                        <h6 class="m-0 font-weight-bold mt-2">Employees Table</h6>
+                        <h6 class="m-0 font-weight-bold mt-2">Add Employee</h6>
                     </div>
                     <div class="card-body extend">
                         <div class="row mb-1">
