--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -82,7 +82,7 @@
         </div>
         <div class="card-header py-3 header-bg">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="row mb-2">
                         <button id="toggleButton" name="toggleButton"
                             class=" ml-3 btn btn-circle btn-outline-inventory ">
@@ -91,9 +91,9 @@
                         <h6 class="mt-2 ml-3 font-weight-bold table-title">Production Inventory</h6>
                     </div>
                 </div>
-                <div class="col-md-8">
-                    <div class="row d-flex justify-content-end">
-                        <div class="col">
+                <div class="col-md-9">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-md-4 mb-1">
                             <div class="customdropdown">
                                 <div class="select selectcategory">
                                     <span id="selectedcategory">Filter by Category</span>
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                         <% if (accesstype === "Owner") { %>
-                            <div class="col">
+                            <div class="col-md-4 mb-1">
                                 <div class="customdropdown">
                                     <div class="select selectbranch">
                                         <span id="selectedbranch">Filter by Branch</span>
@@ -117,7 +117,7 @@
                                 </div>
                             </div>
                         <% } else { %>
-                            <div class="col" hidden>
+                            <div class="col-md-4 mb-1" hidden>
                                 <div class="customdropdown">
                                     <div class="select selectbranch">
                                         <span id="selectedbranch">Filter by Branch</span>
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                         <% } %>
-                        <div class="col-5">
+                        <div class="col-md-3 mb-1">
                             <div class="input-group">
                                 <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
@@ -141,12 +141,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-1">
-                            <div class="row d-flex justify-content-center">
-                                <button class="btn btn-outline-inventory ml-2" id="convertopdf">
-                                    <i class="fas fa-download fa-sm"></i>
-                                </button>
-                            </div>
+                        <div class="col-md-1 mb-1">
+                            <button class="btn btn-outline-inventory w-100 text-center" id="convertopdf">
+                                <i class="fas fa-download fa-sm"></i> <span class="web-hidden">Download to PDF</span>
+                            </button>
                         </div>
                     </div>
                 </div>
