--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -103,7 +103,7 @@
         </div>
     </div>
 
-    <div class="card shadow mb-4 table-size-sd">
+    <div class="card shadow mb-4 cardbody-size-sales-details">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100">
@@ -128,7 +128,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container">
+            <div class="table-responsive scroll-cardbody-size-sales-details border">
                 <table class="table table-bordered custom-mobile-table" id="salesdetail-dataTable" width="100%"
                     cellspacing="10">
                     <thead class="table-header">
