--- a/views/shiftreports/shiftreports.ejs
+++ b/views/shiftreports/shiftreports.ejs
@@ -196,7 +196,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scroll-cardbody-size-710">
+            <div class="table-responsive scroll-cardbody-size-710 border">
                 <table class="table table-bordered custom-mobile-table" id="shift-dataTable" width="100%"
                     cellspacing="10">
                     <thead class="table-header">
